# MultiworldGG-Index

./: .gitignore  README.md  main-protection.json  mwgg_igdb.py  pyproject.toml  update_rules.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  manifest_issue.yml  schema_change.yml  transfer-codeowner.yml
.github/PULL_REQUEST_TEMPLATE/: manifest_update.md
.github/workflows/: daily-release.yml  greg-pr-review.yml  igdb-enrich.yml  igdb-game-details.yml  igdb-pr-lookup.yml  igdb-tag-cleanup.yml  karen-pr-review.yml
output/: igdb_game_details.json
schema/: world_manifest.schema.json
scripts/: backfill_worlds.py  build_variants.py  game_index_template.py  greg_review.py  igdb_enrich.py  igdb_game_details.py  igdb_pr_lookup.py  karen_review.py  manifest.py
worlds/: 2048.json  adventure.json  against_the_storm.json  ahit.json  albw.json  alttp.json  am2r.json  animal_well.json  apeescape.json  apgo.json  apquest.json  apsudoku.json  aquaria.json  archipidle.json  aus.json  balatro.json  banjo_tooie.json  bfbb.json  bksim.json  blasphemous.json  bomb_rush_cyberfunk.json  brotato.json  bumpstik.json  candybox2.json  cat_quest.json  cccharles.json  celeste.json  celeste64.json  celeste_open_world.json  chainedechoes.json  chatipelago.json  checksfinder.json  civ_6.json  clique.json  crosscode.json  crystal_project.json  ctjot.json  cuphead.json  cv64.json  cv_dos.json  (+190 more)
