[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mwgg_igdb"
version = "2026.05.01"
description = "MultiworldGG game index — No-Rating variant (excludes Adults Only)"
authors = [{name = "MultiworldGG"}]
requires-python = ">=3.8"
classifiers = [
    "Private :: Do Not Upload"
]

[tool.setuptools]
py-modules = ["mwgg_igdb"]
